testsuite/poke.pkl/add-1.pk
/* -*- mode: c -*- */
/* { dg-do compile } */

defun add_wrong = ()
  {
   defvar a = 10;
   return a + "foo"; /* { dg-error "invalid operands" } */
  }
